--- a/FindElectricity/FEMine/ViewController/FECollectViewController.xib
+++ b/FindElectricity/FEMine/ViewController/FECollectViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FECollectViewController">
             <connections>
+                <outlet property="tableView" destination="xJ8-eO-hQe" id="br3-KC-2CF"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,13 +19,22 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xJ8-eO-hQe">
-                    <rect key="frame" x="58" y="348" width="240" height="128"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xJ8-eO-hQe">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="L4t-Hw-KHt"/>
+                        <outlet property="delegate" destination="-1" id="5I7-wq-sJZ"/>
+                    </connections>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="xJ8-eO-hQe" secondAttribute="trailing" id="CYA-fn-ZrC"/>
+                <constraint firstItem="xJ8-eO-hQe" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="Eu4-9p-H28"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="xJ8-eO-hQe" secondAttribute="bottom" id="UtO-fL-xeU"/>
+                <constraint firstItem="xJ8-eO-hQe" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="cWu-Dl-cwg"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="132" y="153"/>
         </view>
