--- a/FindElectricity/FEMine/ViewController/FEMineMsgViewController.xib
+++ b/FindElectricity/FEMine/ViewController/FEMineMsgViewController.xib
@@ -18,13 +18,22 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hxM-gp-Jv1">
-                    <rect key="frame" x="126" y="262" width="46" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Button"/>
-                </button>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EbW-Qc-fbz">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="Ns7-YU-cLb"/>
+                        <outlet property="delegate" destination="-1" id="7c0-ct-H1a"/>
+                    </connections>
+                </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="EbW-Qc-fbz" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="0vq-qa-ncJ"/>
+                <constraint firstAttribute="bottom" secondItem="EbW-Qc-fbz" secondAttribute="bottom" id="Bdr-pT-qjJ"/>
+                <constraint firstItem="EbW-Qc-fbz" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="TPr-gx-4DS"/>
+                <constraint firstAttribute="trailing" secondItem="EbW-Qc-fbz" secondAttribute="trailing" id="tVN-pi-QzN"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="132" y="153"/>
         </view>
