--- a/FindElectricity/FEMine/ViewController/FEPositionErrorViewController.xib
+++ b/FindElectricity/FEMine/ViewController/FEPositionErrorViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FEPositionErrorViewController">
             <connections>
+                <outlet property="tableView" destination="uSx-uF-t53" id="ATU-e8-wAI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,13 +19,22 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6QR-ol-pZX">
-                    <rect key="frame" x="40" y="74" width="240" height="128"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uSx-uF-t53">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="WeX-hG-kGG"/>
+                        <outlet property="delegate" destination="-1" id="WEC-Ra-7wK"/>
+                    </connections>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="uSx-uF-t53" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Vrl-YS-dtG"/>
+                <constraint firstItem="uSx-uF-t53" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="ZCA-Np-NOc"/>
+                <constraint firstAttribute="trailing" secondItem="uSx-uF-t53" secondAttribute="trailing" id="eaA-fR-Slk"/>
+                <constraint firstAttribute="bottom" secondItem="uSx-uF-t53" secondAttribute="bottom" id="vbV-RG-Y2G"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="132" y="153"/>
         </view>
